--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build-mkdist": "mkdir -p dist",
     "build-statics": "cp LICENSE.md README.md dist",
     "build-bundle": "./node_modules/.bin/browserify -d src/index -o dist/index.js -s ConError",
-    "build-minify": "./node_modules/.bin/uglifyjs dist/index.js -cmo dist/index.min.js",
+    "build-minify": "./node_modules/.bin/uglifyjs -cm reserved='[ConError]' dist/index.js -o dist/index.min.js",
+    "build-minify-warn": "./node_modules/.bin/uglifyjs -cm reserved='[ConError]' --verbose --warn dist/index.js -o dist/index.min.js",
     "build": "npm run build-mkdist && npm run build-statics && npm run build-bundle && npm run build-minify"
   },
   "main": "./dist/index.min.js",
