adding travis and coveralls

--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
     "build-minify": "./node_modules/.bin/uglifyjs -c 'dead_code,unsafe,conditionals,comparisons,evaluate,booleans,loops,unused,if_return,inline,join_vars,cascade,collapse_vars,reduce_vars,passes=2' -m reserved='[ConError]' dist/index.js -o dist/index.min.js",
     "build-minify-safe": "./node_modules/.bin/uglifyjs -cm reserved='[ConError]' dist/index.js -o dist/index.min.js",
     "build-minify-warn": "./node_modules/.bin/uglifyjs -c 'dead_code,unsafe,conditionals,comparisons,evaluate,booleans,loops,unused,if_return,inline,join_vars,cascade,collapse_vars,reduce_vars,passes=2,warnings' -m reserved='[ConError]' --verbose --warn dist/index.js -o dist/index.min.js",
-    "build": "npm run build-mkdist && npm run build-static && npm run build-bundle && npm run build-minify"
+    "build": "npm run build-mkdist && npm run build-static && npm run build-bundle && npm run build-minify",
+    "test": "./node_modules/.bin/jest",
+    "coverage": "./node_modules/.bin/jest --coverage"
   },
   "main": "./dist/index.min.js",
   "license": "ISC",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "babel-preset-env": "^1.6.0",
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
+    "coveralls": "^2.13.1",
     "jest": "~20.0.4",
     "uglify-js": "^3.0.27"
   },
