--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "con-error",
   "version": "0.0.1",
+  "keywords": ["javascript", "errors", "promises"],
   "scripts": {
     "build-mkdist": "mkdir -p dist",
     "build-static": "cp LICENSE.md README.md dist",
