--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "con-error",
   "version": "0.0.7",
-  "keywords": ["javascript", "errors", "promises"],
+  "description": "Chainable errors with context objects",
+  "keywords": ["javascript", "error", "context", "chain", "promise"],
   "scripts": {
     "build-mkdist": "mkdir -p dist",
     "build-static": "cp LICENSE.md README.md dist",
@@ -18,7 +19,7 @@
     "type": "git",
     "url": "git+https://github.com/klhuillier/con-error.git"
   },
-  "license": "zlib",
+  "license": "Zlib",
   "dependencies": {},
   "devDependencies": {
     "babel-preset-env": "^1.6.0",
