--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "jest": "~20.0.4",
     "uglify-js": "^3.0.27"
   },
+  "engines": {
+    "node": ">= 4.0.0"
+  },
   "browserify": {
     "transform": [
       [
